hphp/hack/test/typecheck/array/disallow_hetergeneous_inputs_for_varray.php
<?hh

function test(): void {
  dict["tingley" => 0, "meijer"];
}
